--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -1,4 +1,4 @@
----
+aztec
 title: Welcome
 description: "Aztec introduces a privacy-centric zkRollup solution for Ethereum, enhancing confidentiality and scalability within the Ethereum ecosystem."
 displayed_sidebar: sidebar
