--- a/docs/versioned_docs/version-alpha-testnet/developers/guides/smart_contracts/writing_contracts/index.mdx
+++ b/docs/versioned_docs/version-alpha-testnet/developers/guides/smart_contracts/writing_contracts/index.mdx
@@ -33,7 +33,7 @@ use dep::aztec::protocol_types::traits::{Hash, ToField};
 > <sup>
 >   <sub>
 >     <a
->       href="https://github.com/AztecProtocol/aztec-packages/blob/v0.85.0-alpha-testnet.5/noir-projects/noir-contracts/contracts/app/easy_private_voting_contract/src/main.nr#L8-L16"
+>       href="https://github.com/AztecProtocol/aztec-packages/blob/alpha-testnet/noir-projects/noir-contracts/contracts/app/easy_private_voting_contract/src/main.nr#L8-L16"
 >       target="_blank"
 >       rel="noopener noreferrer"
 >     >
@@ -58,7 +58,7 @@ struct Storage<Context> {
 > <sup>
 >   <sub>
 >     <a
->       href="https://github.com/AztecProtocol/aztec-packages/blob/v0.85.0-alpha-testnet.5/noir-projects/noir-contracts/contracts/app/easy_private_voting_contract/src/main.nr#L17-L25"
+>       href="https://github.com/AztecProtocol/aztec-packages/blob/alpha-testnet/noir-projects/noir-contracts/contracts/app/easy_private_voting_contract/src/main.nr#L17-L25"
 >       target="_blank"
 >       rel="noopener noreferrer"
 >     >
@@ -84,7 +84,7 @@ fn constructor(admin: AztecAddress) {
 > <sup>
 >   <sub>
 >     <a
->       href="https://github.com/AztecProtocol/aztec-packages/blob/v0.85.0-alpha-testnet.5/noir-projects/noir-contracts/contracts/app/easy_private_voting_contract/src/main.nr#L27-L36"
+>       href="https://github.com/AztecProtocol/aztec-packages/blob/alpha-testnet/noir-projects/noir-contracts/contracts/app/easy_private_voting_contract/src/main.nr#L27-L36"
 >       target="_blank"
 >       rel="noopener noreferrer"
 >     >
@@ -114,7 +114,7 @@ fn cast_vote(candidate: Field) {
 > <sup>
 >   <sub>
 >     <a
->       href="https://github.com/AztecProtocol/aztec-packages/blob/v0.85.0-alpha-testnet.5/noir-projects/noir-contracts/contracts/app/easy_private_voting_contract/src/main.nr#L38-L51"
+>       href="https://github.com/AztecProtocol/aztec-packages/blob/alpha-testnet/noir-projects/noir-contracts/contracts/app/easy_private_voting_contract/src/main.nr#L38-L51"
 >       target="_blank"
 >       rel="noopener noreferrer"
 >     >
